include $(top_srcdir)/common/python.mk
include $(top_srcdir)/common/locale.mk

flumotiondir = $(libdir)/flumotion/python/flumotion/project

flumotion_PYTHON = flash.py

clean-local:
	rm -f *.pyc *.pyo

PROJECT = flash

BUILT_SOURCES = flash.py
CLEANFILES = $(BUILT_SOURCES)

EXTRA_DIST = flash.py.in
